// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the ApdKeyPersonForm component renders correctly if the person does not have costs 1`] = `
<form
  aria-label="form"
  index={1}
  onSubmit={[Function]}
>
  <h4
    className="ds-h4"
  >
    Additional Key Personnel
  </h4>
  <p
    className="ds-u-margin-bottom--0"
  >
    Provide the name, email, and role for this key personnel. If applicable, provide the individual's total annual cost (including benefits) and their allocation to the overall project work.
  </p>
  <Component
    control={
      Object {
        "_defaultValues": Object {
          "costs": Object {
            "1992": 100,
            "1993": 300,
          },
          "email": "email address",
          "fte": Object {
            "1992": 0.32,
            "1993": 0.57,
          },
          "hasCosts": "no",
          "name": "Bob the Builder",
          "position": "The Builder",
        },
        "_executeSchema": [Function],
        "_fields": Object {},
        "_formState": Object {
          "dirtyFields": Object {},
          "errors": Object {},
          "isDirty": false,
          "isSubmitSuccessful": false,
          "isSubmitted": false,
          "isSubmitting": false,
          "isValid": false,
          "isValidating": false,
          "submitCount": 0,
          "touchedFields": Object {},
        },
        "_formValues": Object {
          "costs": Object {
            "1992": 100,
            "1993": 300,
          },
          "email": "email address",
          "fte": Object {
            "1992": 0.32,
            "1993": 0.57,
          },
          "hasCosts": "no",
          "name": "Bob the Builder",
          "position": "The Builder",
        },
        "_getDirty": [Function],
        "_getFieldArray": [Function],
        "_getWatch": [Function],
        "_names": Object {
          "array": Set {},
          "mount": Set {},
          "unMount": Set {},
          "watch": Set {},
        },
        "_options": Object {
          "defaultValues": Object {
            "costs": Object {
              "1992": 100,
              "1993": 300,
            },
            "email": "email address",
            "fte": Object {
              "1992": 0.32,
              "1993": 0.57,
            },
            "hasCosts": "no",
            "name": "Bob the Builder",
            "position": "The Builder",
          },
          "mode": "onBlur",
          "reValidateMode": "onBlur",
          "resolver": [Function],
          "shouldFocusError": true,
        },
        "_proxyFormState": Object {
          "dirtyFields": false,
          "errors": "all",
          "isDirty": false,
          "isValid": "all",
          "isValidating": false,
          "touchedFields": false,
        },
        "_removeUnmounted": [Function],
        "_stateFlags": Object {
          "action": false,
          "mount": false,
          "watch": false,
        },
        "_subjects": Object {
          "array": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
          "state": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
          "watch": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
        },
        "_updateFieldArray": [Function],
        "_updateValid": [Function],
        "getFieldState": [Function],
        "register": [Function],
        "unregister": [Function],
      }
    }
    name="name"
    render={[Function]}
  />
  <Component
    control={
      Object {
        "_defaultValues": Object {
          "costs": Object {
            "1992": 100,
            "1993": 300,
          },
          "email": "email address",
          "fte": Object {
            "1992": 0.32,
            "1993": 0.57,
          },
          "hasCosts": "no",
          "name": "Bob the Builder",
          "position": "The Builder",
        },
        "_executeSchema": [Function],
        "_fields": Object {},
        "_formState": Object {
          "dirtyFields": Object {},
          "errors": Object {},
          "isDirty": false,
          "isSubmitSuccessful": false,
          "isSubmitted": false,
          "isSubmitting": false,
          "isValid": false,
          "isValidating": false,
          "submitCount": 0,
          "touchedFields": Object {},
        },
        "_formValues": Object {
          "costs": Object {
            "1992": 100,
            "1993": 300,
          },
          "email": "email address",
          "fte": Object {
            "1992": 0.32,
            "1993": 0.57,
          },
          "hasCosts": "no",
          "name": "Bob the Builder",
          "position": "The Builder",
        },
        "_getDirty": [Function],
        "_getFieldArray": [Function],
        "_getWatch": [Function],
        "_names": Object {
          "array": Set {},
          "mount": Set {},
          "unMount": Set {},
          "watch": Set {},
        },
        "_options": Object {
          "defaultValues": Object {
            "costs": Object {
              "1992": 100,
              "1993": 300,
            },
            "email": "email address",
            "fte": Object {
              "1992": 0.32,
              "1993": 0.57,
            },
            "hasCosts": "no",
            "name": "Bob the Builder",
            "position": "The Builder",
          },
          "mode": "onBlur",
          "reValidateMode": "onBlur",
          "resolver": [Function],
          "shouldFocusError": true,
        },
        "_proxyFormState": Object {
          "dirtyFields": false,
          "errors": "all",
          "isDirty": false,
          "isValid": "all",
          "isValidating": false,
          "touchedFields": false,
        },
        "_removeUnmounted": [Function],
        "_stateFlags": Object {
          "action": false,
          "mount": false,
          "watch": false,
        },
        "_subjects": Object {
          "array": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
          "state": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
          "watch": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
        },
        "_updateFieldArray": [Function],
        "_updateValid": [Function],
        "getFieldState": [Function],
        "register": [Function],
        "unregister": [Function],
      }
    }
    name="email"
    render={[Function]}
  />
  <Component
    control={
      Object {
        "_defaultValues": Object {
          "costs": Object {
            "1992": 100,
            "1993": 300,
          },
          "email": "email address",
          "fte": Object {
            "1992": 0.32,
            "1993": 0.57,
          },
          "hasCosts": "no",
          "name": "Bob the Builder",
          "position": "The Builder",
        },
        "_executeSchema": [Function],
        "_fields": Object {},
        "_formState": Object {
          "dirtyFields": Object {},
          "errors": Object {},
          "isDirty": false,
          "isSubmitSuccessful": false,
          "isSubmitted": false,
          "isSubmitting": false,
          "isValid": false,
          "isValidating": false,
          "submitCount": 0,
          "touchedFields": Object {},
        },
        "_formValues": Object {
          "costs": Object {
            "1992": 100,
            "1993": 300,
          },
          "email": "email address",
          "fte": Object {
            "1992": 0.32,
            "1993": 0.57,
          },
          "hasCosts": "no",
          "name": "Bob the Builder",
          "position": "The Builder",
        },
        "_getDirty": [Function],
        "_getFieldArray": [Function],
        "_getWatch": [Function],
        "_names": Object {
          "array": Set {},
          "mount": Set {},
          "unMount": Set {},
          "watch": Set {},
        },
        "_options": Object {
          "defaultValues": Object {
            "costs": Object {
              "1992": 100,
              "1993": 300,
            },
            "email": "email address",
            "fte": Object {
              "1992": 0.32,
              "1993": 0.57,
            },
            "hasCosts": "no",
            "name": "Bob the Builder",
            "position": "The Builder",
          },
          "mode": "onBlur",
          "reValidateMode": "onBlur",
          "resolver": [Function],
          "shouldFocusError": true,
        },
        "_proxyFormState": Object {
          "dirtyFields": false,
          "errors": "all",
          "isDirty": false,
          "isValid": "all",
          "isValidating": false,
          "touchedFields": false,
        },
        "_removeUnmounted": [Function],
        "_stateFlags": Object {
          "action": false,
          "mount": false,
          "watch": false,
        },
        "_subjects": Object {
          "array": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
          "state": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
          "watch": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
        },
        "_updateFieldArray": [Function],
        "_updateValid": [Function],
        "getFieldState": [Function],
        "register": [Function],
        "unregister": [Function],
      }
    }
    name="position"
    render={[Function]}
  />
  <Component
    control={
      Object {
        "_defaultValues": Object {
          "costs": Object {
            "1992": 100,
            "1993": 300,
          },
          "email": "email address",
          "fte": Object {
            "1992": 0.32,
            "1993": 0.57,
          },
          "hasCosts": "no",
          "name": "Bob the Builder",
          "position": "The Builder",
        },
        "_executeSchema": [Function],
        "_fields": Object {},
        "_formState": Object {
          "dirtyFields": Object {},
          "errors": Object {},
          "isDirty": false,
          "isSubmitSuccessful": false,
          "isSubmitted": false,
          "isSubmitting": false,
          "isValid": false,
          "isValidating": false,
          "submitCount": 0,
          "touchedFields": Object {},
        },
        "_formValues": Object {
          "costs": Object {
            "1992": 100,
            "1993": 300,
          },
          "email": "email address",
          "fte": Object {
            "1992": 0.32,
            "1993": 0.57,
          },
          "hasCosts": "no",
          "name": "Bob the Builder",
          "position": "The Builder",
        },
        "_getDirty": [Function],
        "_getFieldArray": [Function],
        "_getWatch": [Function],
        "_names": Object {
          "array": Set {},
          "mount": Set {},
          "unMount": Set {},
          "watch": Set {},
        },
        "_options": Object {
          "defaultValues": Object {
            "costs": Object {
              "1992": 100,
              "1993": 300,
            },
            "email": "email address",
            "fte": Object {
              "1992": 0.32,
              "1993": 0.57,
            },
            "hasCosts": "no",
            "name": "Bob the Builder",
            "position": "The Builder",
          },
          "mode": "onBlur",
          "reValidateMode": "onBlur",
          "resolver": [Function],
          "shouldFocusError": true,
        },
        "_proxyFormState": Object {
          "dirtyFields": false,
          "errors": "all",
          "isDirty": false,
          "isValid": "all",
          "isValidating": false,
          "touchedFields": false,
        },
        "_removeUnmounted": [Function],
        "_stateFlags": Object {
          "action": false,
          "mount": false,
          "watch": false,
        },
        "_subjects": Object {
          "array": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
          "state": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
          "watch": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
        },
        "_updateFieldArray": [Function],
        "_updateValid": [Function],
        "getFieldState": [Function],
        "register": [Function],
        "unregister": [Function],
      }
    }
    name="hasCosts"
    render={[Function]}
  />
  <input
    className="ds-u-visibility--hidden"
    hidden={true}
    type="submit"
  />
</form>
`;

exports[`the ApdKeyPersonForm component renders correctly if the person is a primary contact 1`] = `
<form
  aria-label="form"
  index={0}
  onSubmit={[Function]}
>
  <h4
    className="ds-h4"
  >
    Primary APD Point of Contact
  </h4>
  <p
    className="ds-u-margin-bottom--0"
  >
    Personnel listed in this section must be assigned to APD by name, role, time commitment, and cost, where applicable.
  </p>
  <Component
    control={
      Object {
        "_defaultValues": Object {
          "costs": Object {
            "1992": 100,
            "1993": 300,
          },
          "email": "email address",
          "fte": Object {
            "1992": 0.32,
            "1993": 0.57,
          },
          "hasCosts": "yes",
          "name": "Bob the Builder",
          "position": "The Builder",
        },
        "_executeSchema": [Function],
        "_fields": Object {},
        "_formState": Object {
          "dirtyFields": Object {},
          "errors": Object {},
          "isDirty": false,
          "isSubmitSuccessful": false,
          "isSubmitted": false,
          "isSubmitting": false,
          "isValid": false,
          "isValidating": false,
          "submitCount": 0,
          "touchedFields": Object {},
        },
        "_formValues": Object {
          "costs": Object {
            "1992": 100,
            "1993": 300,
          },
          "email": "email address",
          "fte": Object {
            "1992": 0.32,
            "1993": 0.57,
          },
          "hasCosts": "yes",
          "name": "Bob the Builder",
          "position": "The Builder",
        },
        "_getDirty": [Function],
        "_getFieldArray": [Function],
        "_getWatch": [Function],
        "_names": Object {
          "array": Set {},
          "mount": Set {},
          "unMount": Set {},
          "watch": Set {},
        },
        "_options": Object {
          "defaultValues": Object {
            "costs": Object {
              "1992": 100,
              "1993": 300,
            },
            "email": "email address",
            "fte": Object {
              "1992": 0.32,
              "1993": 0.57,
            },
            "hasCosts": "yes",
            "name": "Bob the Builder",
            "position": "The Builder",
          },
          "mode": "onBlur",
          "reValidateMode": "onBlur",
          "resolver": [Function],
          "shouldFocusError": true,
        },
        "_proxyFormState": Object {
          "dirtyFields": false,
          "errors": "all",
          "isDirty": false,
          "isValid": "all",
          "isValidating": false,
          "touchedFields": false,
        },
        "_removeUnmounted": [Function],
        "_stateFlags": Object {
          "action": false,
          "mount": false,
          "watch": false,
        },
        "_subjects": Object {
          "array": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
          "state": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
          "watch": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
        },
        "_updateFieldArray": [Function],
        "_updateValid": [Function],
        "getFieldState": [Function],
        "register": [Function],
        "unregister": [Function],
      }
    }
    name="name"
    render={[Function]}
  />
  <Component
    control={
      Object {
        "_defaultValues": Object {
          "costs": Object {
            "1992": 100,
            "1993": 300,
          },
          "email": "email address",
          "fte": Object {
            "1992": 0.32,
            "1993": 0.57,
          },
          "hasCosts": "yes",
          "name": "Bob the Builder",
          "position": "The Builder",
        },
        "_executeSchema": [Function],
        "_fields": Object {},
        "_formState": Object {
          "dirtyFields": Object {},
          "errors": Object {},
          "isDirty": false,
          "isSubmitSuccessful": false,
          "isSubmitted": false,
          "isSubmitting": false,
          "isValid": false,
          "isValidating": false,
          "submitCount": 0,
          "touchedFields": Object {},
        },
        "_formValues": Object {
          "costs": Object {
            "1992": 100,
            "1993": 300,
          },
          "email": "email address",
          "fte": Object {
            "1992": 0.32,
            "1993": 0.57,
          },
          "hasCosts": "yes",
          "name": "Bob the Builder",
          "position": "The Builder",
        },
        "_getDirty": [Function],
        "_getFieldArray": [Function],
        "_getWatch": [Function],
        "_names": Object {
          "array": Set {},
          "mount": Set {},
          "unMount": Set {},
          "watch": Set {},
        },
        "_options": Object {
          "defaultValues": Object {
            "costs": Object {
              "1992": 100,
              "1993": 300,
            },
            "email": "email address",
            "fte": Object {
              "1992": 0.32,
              "1993": 0.57,
            },
            "hasCosts": "yes",
            "name": "Bob the Builder",
            "position": "The Builder",
          },
          "mode": "onBlur",
          "reValidateMode": "onBlur",
          "resolver": [Function],
          "shouldFocusError": true,
        },
        "_proxyFormState": Object {
          "dirtyFields": false,
          "errors": "all",
          "isDirty": false,
          "isValid": "all",
          "isValidating": false,
          "touchedFields": false,
        },
        "_removeUnmounted": [Function],
        "_stateFlags": Object {
          "action": false,
          "mount": false,
          "watch": false,
        },
        "_subjects": Object {
          "array": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
          "state": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
          "watch": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
        },
        "_updateFieldArray": [Function],
        "_updateValid": [Function],
        "getFieldState": [Function],
        "register": [Function],
        "unregister": [Function],
      }
    }
    name="email"
    render={[Function]}
  />
  <Component
    control={
      Object {
        "_defaultValues": Object {
          "costs": Object {
            "1992": 100,
            "1993": 300,
          },
          "email": "email address",
          "fte": Object {
            "1992": 0.32,
            "1993": 0.57,
          },
          "hasCosts": "yes",
          "name": "Bob the Builder",
          "position": "The Builder",
        },
        "_executeSchema": [Function],
        "_fields": Object {},
        "_formState": Object {
          "dirtyFields": Object {},
          "errors": Object {},
          "isDirty": false,
          "isSubmitSuccessful": false,
          "isSubmitted": false,
          "isSubmitting": false,
          "isValid": false,
          "isValidating": false,
          "submitCount": 0,
          "touchedFields": Object {},
        },
        "_formValues": Object {
          "costs": Object {
            "1992": 100,
            "1993": 300,
          },
          "email": "email address",
          "fte": Object {
            "1992": 0.32,
            "1993": 0.57,
          },
          "hasCosts": "yes",
          "name": "Bob the Builder",
          "position": "The Builder",
        },
        "_getDirty": [Function],
        "_getFieldArray": [Function],
        "_getWatch": [Function],
        "_names": Object {
          "array": Set {},
          "mount": Set {},
          "unMount": Set {},
          "watch": Set {},
        },
        "_options": Object {
          "defaultValues": Object {
            "costs": Object {
              "1992": 100,
              "1993": 300,
            },
            "email": "email address",
            "fte": Object {
              "1992": 0.32,
              "1993": 0.57,
            },
            "hasCosts": "yes",
            "name": "Bob the Builder",
            "position": "The Builder",
          },
          "mode": "onBlur",
          "reValidateMode": "onBlur",
          "resolver": [Function],
          "shouldFocusError": true,
        },
        "_proxyFormState": Object {
          "dirtyFields": false,
          "errors": "all",
          "isDirty": false,
          "isValid": "all",
          "isValidating": false,
          "touchedFields": false,
        },
        "_removeUnmounted": [Function],
        "_stateFlags": Object {
          "action": false,
          "mount": false,
          "watch": false,
        },
        "_subjects": Object {
          "array": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
          "state": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
          "watch": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
        },
        "_updateFieldArray": [Function],
        "_updateValid": [Function],
        "getFieldState": [Function],
        "register": [Function],
        "unregister": [Function],
      }
    }
    name="position"
    render={[Function]}
  />
  <Component
    control={
      Object {
        "_defaultValues": Object {
          "costs": Object {
            "1992": 100,
            "1993": 300,
          },
          "email": "email address",
          "fte": Object {
            "1992": 0.32,
            "1993": 0.57,
          },
          "hasCosts": "yes",
          "name": "Bob the Builder",
          "position": "The Builder",
        },
        "_executeSchema": [Function],
        "_fields": Object {},
        "_formState": Object {
          "dirtyFields": Object {},
          "errors": Object {},
          "isDirty": false,
          "isSubmitSuccessful": false,
          "isSubmitted": false,
          "isSubmitting": false,
          "isValid": false,
          "isValidating": false,
          "submitCount": 0,
          "touchedFields": Object {},
        },
        "_formValues": Object {
          "costs": Object {
            "1992": 100,
            "1993": 300,
          },
          "email": "email address",
          "fte": Object {
            "1992": 0.32,
            "1993": 0.57,
          },
          "hasCosts": "yes",
          "name": "Bob the Builder",
          "position": "The Builder",
        },
        "_getDirty": [Function],
        "_getFieldArray": [Function],
        "_getWatch": [Function],
        "_names": Object {
          "array": Set {},
          "mount": Set {},
          "unMount": Set {},
          "watch": Set {},
        },
        "_options": Object {
          "defaultValues": Object {
            "costs": Object {
              "1992": 100,
              "1993": 300,
            },
            "email": "email address",
            "fte": Object {
              "1992": 0.32,
              "1993": 0.57,
            },
            "hasCosts": "yes",
            "name": "Bob the Builder",
            "position": "The Builder",
          },
          "mode": "onBlur",
          "reValidateMode": "onBlur",
          "resolver": [Function],
          "shouldFocusError": true,
        },
        "_proxyFormState": Object {
          "dirtyFields": false,
          "errors": "all",
          "isDirty": false,
          "isValid": "all",
          "isValidating": false,
          "touchedFields": false,
        },
        "_removeUnmounted": [Function],
        "_stateFlags": Object {
          "action": false,
          "mount": false,
          "watch": false,
        },
        "_subjects": Object {
          "array": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
          "state": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
          "watch": Object {
            "next": [Function],
            "observers": Array [],
            "subscribe": [Function],
            "unsubscribe": [Function],
          },
        },
        "_updateFieldArray": [Function],
        "_updateValid": [Function],
        "getFieldState": [Function],
        "register": [Function],
        "unregister": [Function],
      }
    }
    name="hasCosts"
    render={[Function]}
  />
  <input
    className="ds-u-visibility--hidden"
    hidden={true}
    type="submit"
  />
</form>
`;
